--- a/sec-1/BookCall.html
+++ b/sec-1/BookCall.html
@@ -3,34 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f6f145f38e.js" crossorigin="anonymous"></script>
-   
 </head>
-<body class=" bg-[#2B3445]">
-    <div class="flex flex-col items-center justify-around mt-[250px]">
-        <div class="flex flex-col items-center justify-center gap-12 mb-[257px]">
-            <div class="bg-white w-[100px] h-[100px] flex items-center justify-center rounded-full">
-                <img class="w-[56.708px] h-[56.708px] rounded-full" src="./images/call.png" alt="">
+<body class="bg-[#2B3445] flex items-center justify-center min-h-screen">
+    <div class="flex flex-col items-center justify-around mt-10 px-4 md:mt-[250px]">
+        <div class="flex flex-col items-center justify-center gap-12 mb-10 md:mb-[257px]">
+            <div class="bg-white w-[80px] h-[80px] md:w-[100px] md:h-[100px] flex items-center justify-center rounded-full">
+                <img class="w-[40px] h-[40px] md:w-[56.708px] md:h-[56.708px] rounded-full" src="./images/call.png" alt="">
             </div>
-            <div>
-                <p>Your Service has been booked and confirmed!</p>
+            <div class="text-center">
+                <p class="text-white text-sm md:text-lg">Your Service has been booked and confirmed!</p>
             </div>
         </div>
 
-        <div class="flex flex-col text-center gap-10  text-white items-center justify-center">
-            <div class="relative flex items-center justify-center gap-1 bg-white w-[612px] h-[60px] rounded-xl">
-                <img class="relative z-10" src="../images/ph_chat-bold.png" alt="">
-                <a class="text-black text-[18px]" href="">Chat with Thomas Hope</a>
+        <div class="flex flex-col text-center gap-6 md:gap-10 text-white items-center justify-center">
+            <div class="relative flex items-center justify-center gap-1 bg-white w-full max-w-[320px] md:max-w-[612px] h-[50px] md:h-[60px] rounded-xl">
+                <img class="relative z-10 w-6 h-6 md:w-auto md:h-auto" src="../images/ph_chat-bold.png" alt="">
+                <a class="text-black text-[14px] md:text-[18px]" href="">Chat with Thomas Hope</a>
             </div>
             <div>
-                <p>Dashboard</p>
+                <p class="text-white text-sm md:text-lg">Dashboard</p>
             </div>
         </div>
     </div>
-        
-    
 </body>
 </html>
