--- a/sec-3/TrainerRequest.html
+++ b/sec-3/TrainerRequest.html
@@ -69,6 +69,10 @@
                   <img class="ml-4" src="../images/Training.png" alt="">
                   <span class="ml-5">Training Request</span>
               </a>
+              <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainersPayment.html"></a>
+                <img class="ml-4" src="../images/Training.png" alt="">
+                <span class="ml-5">Trainer payment</span>
+            </a>
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400   hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./OwnVideos.html">
                     <img class="ml-4" src="../images/ownvideo.png" alt="">
                     <span class="ml-5">Own Videos</span>
@@ -104,7 +108,7 @@
             <header class="flex justify-between items-center p-4 bg-white shadow-md">
                 <div class="relative flex items-center w-6/12">
                     <i class="absolute z-10 ml-3 fa-solid fa-magnifying-glass text-gray-500 opacity-40"></i>
-                    <a class="w-full" href="/sec-1/searching.html">
+                    <a class="w-full" href="./searching.html">
                     <input class="relative z-0 w-full pl-10 p-2 rounded border border-gray-300" type="search" placeholder="Search anything...">
                     </a>
                 </div>
