--- a/sec-3/chats.html
+++ b/sec-3/chats.html
@@ -73,6 +73,10 @@
                     <img class="ml-4" src="../images/ownvideo.png" alt="">
                     <span class="ml-5">Own Videos</span>
                 </a>
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Trainers.html">
+                    <img class="ml-4" src="../images/Training.png" alt="">
+                    <span class="ml-5">Trainers</span>
+                </a>
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainingCompany.html">
                     <img class="ml-4" src="../images/Training.png" alt="">
                     <span class="ml-5">Training Company</span>
