--- a/sec-3/suportTicket.html
+++ b/sec-3/suportTicket.html
@@ -69,14 +69,27 @@
                     <img class="ml-4" src="../images/running.png" alt="">
                     <span class="ml-5">Running Task</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./OwnVideos.html">
-                    <img class="ml-4" src="../images/ownvideo.png" alt="">
-                    <span class="ml-5">Own Videos</span>
-                </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainingCompany.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Trainers.html">
                     <img class="ml-4" src="../images/Training.png" alt="">
-                    <span class="ml-5">Training Company</span>
+                    <span class="ml-5">Trainer </span>
                 </a>
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainersPayment.html">
+                    <img class="ml-4" src="../images/Training.png" alt="">
+                    <span class="ml-5">Trainer payment</span>
+                </a>
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainerRequest.html">
+                    <img class="ml-4" src="../images/Training.png" alt="">
+                    <span class="ml-5">Trainer Request</span>
+                </a>
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./OwnVideos.html">
+                    <img class="ml-4" src="../images/Training.png" alt="">
+                    <span class="ml-5">Trainer Video</span>
+                </a>
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Reviews.html">
+                    <img class="ml-4" src="../images/Training.png" alt="">
+                    <span class="ml-5">Reviews</span>
+                </a>
+                
                 <h1 class="text-white text-xs font-poppins py-3">ADDITIONAL</h1>
                 <a class="flex justify-start py-[12px]  text-slate-200 border border-stone-400   hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SpendingHistory.html">
                     <img class="ml-4" src="../images/support.png" alt="">
@@ -115,7 +128,7 @@
                         <i class="relative z-0 mr-6 fa-solid fa-bell text-2xl opacity-70"> <div class="absolute z-10 -mt-8 ml-3 p-[4px] border-black border-2 rounded-full bg-red-600"></div></i>
                     </div>
                     <div class=" flex rounded-full w-10 h-10 bg-slate-400">
-                        <img class="rounded-full w-full h-full"  src="/images/dp.png" alt="">
+                        <img class="rounded-full w-full h-full"  src="../images/dp.png" alt="">
                     </div>
                 </div>
             </header>
