--- a/sec-2/OwnVideos.html
+++ b/sec-2/OwnVideos.html
@@ -58,43 +58,43 @@
             <h3 class="mt-6 ml-4 text-sm font-semibold font-poppins text-white">TRAINEE</h3>
             <nav class="flex flex-col py-[15px] mx-4">
               <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500  rounded" href="./dashboard.html">
-                  <img class="ml-4" src="./images/dashboard.png" alt="">
+                  <img class="ml-4" src="../images/dashboard.png" alt="">
                   <span class="ml-5">Dashboard</span>
               </a>
               <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Chats.html">
-                  <img class="ml-4" src="./images/message.png" alt="">
+                  <img class="ml-4" src="../images/message.png" alt="">
                   <span class="ml-5">Messages</span>
               </a>
               <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainerRequest.html">
-                <img class="ml-4" src="./images/Training.png" alt="">
+                <img class="ml-4" src="../images/Training.png" alt="">
                 <span class="ml-5">Training Request</span>
             </a>
               <a class="flex justify-start py-[12px]  text-blue-300 border-2 border-stone-200  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./OwnVideos.html">
-                  <img class="ml-4" src="./images/ownvideo.png" alt="">
+                  <img class="ml-4" src="../images/ownvideo.png" alt="">
                   <span class="ml-5">Own Videos</span>
               </a>
               <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainingCom.html">
-                <img class="ml-4" src="./images/Training.png" alt="">
+                <img class="ml-4" src="../images/Training.png" alt="">
                 <span class="ml-5">Training company</span>
             </a>
             <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Reviews.html">
-              <img class="ml-4" src="./images/Training.png" alt="">
+              <img class="ml-4" src="../images/Training.png" alt="">
               <span class="ml-5">Reviews</span>
           </a>
 
               <h1 class="text-white text-xs font-poppins py-3">ADDITIONAL</h1>
               <a class="flex justify-start py-[12px] text-slate-200 border border-stone-200 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SpendingHistory.html">
-                  <img class="ml-4" src="./images/support.png" alt="">
+                  <img class="ml-4" src="../images/support.png" alt="">
                   <span class="ml-5 ">Spending History</span>
               </a>
              
 
               <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SupportTicker.html">
-                  <img class="ml-4" src="./images/supportTickets.png" alt="">
+                  <img class="ml-4" src="../images/supportTickets.png" alt="">
                   <span class="ml-5">Support Tickets</span>
               </a>
               <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./setting.html">
-                  <img class="ml-4" src="./images/Accountsettings.png" alt="">
+                  <img class="ml-4" src="../images/Accountsettings.png" alt="">
                   <span class="ml-5">Account Settings</span>
               </a>
           </nav>
@@ -117,7 +117,7 @@
                         <i class="relative z-0 mr-6 fa-solid fa-bell text-2xl opacity-70"> <div class="absolute z-10 -mt-8 ml-3 p-[4px] border-black border-2 rounded-full bg-red-600"></div></i>
                     </div>
                     <div class=" flex rounded-full w-10 h-10 bg-slate-400">
-                        <img class="rounded-full w-full h-full"  src="./images/dp.png" alt="">
+                        <img class="rounded-full w-full h-full"  src="../images/dp.png" alt="">
                     </div>
                 </div>
             </header>
@@ -138,12 +138,12 @@
               <div id="video-container" class="mt-4 ml-14 flex flex-wrap gap-11 pb-4">
                 <!-- Video 1 -->
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/tiger.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/tiger.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
@@ -155,12 +155,12 @@
                   </div>
                 </div>
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/image2.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/image2.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
@@ -172,12 +172,12 @@
                   </div>
                 </div>
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/3.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/3.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
@@ -189,12 +189,12 @@
                   </div>
                 </div>
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/4.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/4.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
@@ -206,12 +206,12 @@
                   </div>
                 </div>
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/tiger.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/tiger.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
@@ -223,12 +223,12 @@
                   </div>
                 </div>
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/image2.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/image2.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
@@ -240,12 +240,12 @@
                   </div>
                 </div>
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/3.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/3.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
@@ -257,12 +257,12 @@
                   </div>
                 </div>
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/4.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/4.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
@@ -274,12 +274,12 @@
                   </div>
                 </div>
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/3.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/3.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
@@ -291,12 +291,12 @@
                   </div>
                 </div>
                 <div class="video w-[259px] h-[325px] flex-shrink-0 bg-white shadow-lg rounded-xl">
-                  <img  src="./images/image2.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
+                  <img  src="../images/image2.png" alt="Coding Video 1" class="absolute z-0 w-[259px] h-[165px]">
                   <div class="bg-[#2B3445] text-white rounded-lg">
                     <div class="relative ml-48 mt-[140px] border border-white rounded-full w-[60px] h-[60px] p-1 flex justify-center">
-                        <img src="./images/videoc.png" alt="">
+                        <img src="../images/videoc.png" alt="">
                       </div>
-                      <img src="./images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
+                      <img src="../images/blueright.png" alt="" class="relative z-30  ml-[228px] -mt-2 ">
                       <div class="ml-5 -mt-6 flex-col flex gap-2 items-start">
                         <div class="flex gap-1 items-center">
                             <p class="text-sm font-medium">Andy William</p> 
