--- a/sec-1/SupportTicker.html
+++ b/sec-1/SupportTicker.html
@@ -91,7 +91,7 @@
                     <img class="ml-4" src="../images/supportTickets.png" alt="">
                     <span class="ml-5">Support Tickets</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./setting.html">
                     <img class="ml-4" src="../images/Accountsettings.png" alt="">
                     <span class="ml-5">Account Settings</span>
                 </a>
@@ -115,7 +115,7 @@
                         <i class="relative z-0 mr-6 fa-solid fa-bell text-2xl opacity-70"> <div class="absolute z-10 -mt-8 ml-3 p-[4px] border-black border-2 rounded-full bg-red-600"></div></i>
                     </div>
                     <div class=" flex rounded-full w-10 h-10 bg-slate-400">
-                        <img class="rounded-full w-full h-full"  src="./images/dp.png" alt="">
+                        <img class="rounded-full w-full h-full"  src="../images/dp.png" alt="">
                     </div>
                 </div>
             </header>
