--- a/sec-1/setting.html
+++ b/sec-1/setting.html
@@ -112,7 +112,7 @@
                         <i class="relative z-0 mr-6 fa-solid fa-bell text-2xl opacity-70"> <div class="absolute z-10 -mt-8 ml-3 p-[4px] border-black border-2 rounded-full bg-red-600"></div></i>
                     </div>
                     <div class=" flex rounded-full w-10 h-10 bg-slate-400">
-                        <img class="rounded-full w-full h-full"  src="./images/dp.png" alt="">
+                        <img class="rounded-full w-full h-full"  src="../images/dp.png" alt="">
                     </div>
                 </div>
             </header>
