--- a/sec-2/TrainingCom.html
+++ b/sec-2/TrainingCom.html
@@ -83,7 +83,7 @@
             </a>
   
                 <h1 class="text-white text-xs font-poppins py-3">ADDITIONAL</h1>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SpendingHistory.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Spendinghistory.html">
                     <img class="ml-4" src="../images/support.png" alt="">
                     <span class="ml-5 ">Spending History</span>
                 </a>
