--- a/sec-3/SignUp.html
+++ b/sec-3/SignUp.html
@@ -60,7 +60,7 @@
         <!-- Right side (50% width) with images -->
         <div class="hidden md:block w-full md:w-1/2 h-full relative overflow-hidden">
             <!-- Background Rectangle -->
-            <img src="/images/Rectangle.png" alt="Background Rectangle" class="absolute inset-0 w-full h-full object-cover z-0">
+            <img src="../images/Rectangle.png" alt="Background Rectangle" class="absolute inset-0 w-full h-full object-cover z-0">
 
             <!-- Visible Heading -->
             <h1 class="z-30 mt-8 ms-10 lg:mt-24 w-1/2 xl:w-1/2 h-auto relative text-white text-xs md:text-xl lg:text-3xl xl:text-4xl font-bold p-4">
