--- a/sec-3/suportTicket.html
+++ b/sec-3/suportTicket.html
@@ -104,7 +104,7 @@
                     <img class="ml-4" src="../images/supportTickets.png" alt="">
                     <span class="ml-5">Support Tickets</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./setting.html">
                     <img class="ml-4" src="../images/Accountsettings.png" alt="">
                     <span class="ml-5">Account Settings</span>
                 </a>
