--- a/sec-3/dashboard.html
+++ b/sec-3/dashboard.html
@@ -61,7 +61,7 @@
                   <img class="ml-4" src="../images/dashboard.png" alt="">
                   <span class="ml-5">Dashboard</span>
               </a>
-              <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Chats.html">
+              <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./chats.html">
                   <img class="ml-4" src="../images/message.png" alt="">
                   <span class="ml-5">Messages</span>
               </a>
@@ -83,13 +83,13 @@
           </a>
 
               <h1 class="text-white text-xs font-poppins py-3">ADDITIONAL</h1>
-              <a class="flex justify-start py-[12px] text-slate-200 border border-stone-200 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SpendingHistory.html">
+              <a class="flex justify-start py-[12px] text-slate-200 border border-stone-200 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./spendingHistory.html">
                   <img class="ml-4" src="../images/support.png" alt="">
                   <span class="ml-5 ">Spending History</span>
               </a>
              
 
-              <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SupportTicker.html">
+              <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./supportTicker.html">
                   <img class="ml-4" src="../images/supportTickets.png" alt="">
                   <span class="ml-5">Support Tickets</span>
               </a>
