--- a/sec-3/OwnVideos.html
+++ b/sec-3/OwnVideos.html
@@ -61,7 +61,7 @@
                   <img class="ml-4" src="../images/dashboard.png" alt="">
                   <span class="ml-5">Dashboard</span>
               </a>
-              <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Chats.html">
+              <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./chats.html">
                   <img class="ml-4" src="../images/message.png" alt="">
                   <span class="ml-5">Messages</span>
               </a>
